restaurant orders getting and minor fixes
